<resources>

    <string name="nav_header_title">For DoubletApp</string>
    <string name="nav_header_subtitle">Домашнее задание №8</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="app_name">Мои Привычки</string>
    <string name="habit_name">Название</string>
    <string name="habit_description">Описание</string>
    <string name="first_option">Полезная</string>
    <string name="second_option">Вредная</string>
    <string name="habit_priority">Приоритет</string>
    <string name="type_text">Тип</string>
    <string name="periodicity_text">Периодичность</string>
    <string name="error_text">Заполните все поля</string>
    <string name="frequency_text1">Повторять</string>
    <string name="frequency_text2">раз в</string>
    <string name="frequency_text3">дней</string>

    <string name="color_choose_text">Выберите цвет</string>
    <string name="habit_color">Цвет:</string>
    <string name="about_app1"> Автор: Артем Васильев</string>
    <string name="about_app2">https://github.com/Kibler7/My-Habits/tree/6homeTask</string>
    <string name="about_app3"> Для cедьмого Дз</string>
    <string-array name="priorities">
        <item>Высокий</item>
        <item>Средний</item>
        <item>Низкий</item>
    </string-array >
    <plurals name="plurals_days">
        <item quantity="one">%1$d день</item>
        <item quantity="two">%1$d дня</item>
        <item quantity="few">%1$d дня</item>
        <item quantity="many">%1$d дней</item>
        <item quantity="other">%1$d дней</item>
    </plurals>
    <plurals name="plurals_times">
        <item quantity="one">%1$d раз</item>
        <item quantity="two">%1$d раза</item>
        <item quantity="few">%1$d раза</item>
        <item quantity="many">%1$d раз</item>
        <item quantity="other">%1$d раз</item>
    </plurals>


    <string name="menu_about_app">О приложении</string>
    <string name="menu_habit_list">Мои привычки</string>
    <string name="change_habit_title">Изменить привычку</string>
    <string name="viewPager_goodHabits_title">Полезные</string>
    <string name="viewPager_badHabits_title">Вредные</string>
    <string name="word_day_text">день</string>
    <string name="word_repeat">Повторять</string>
    <string name="word_in">в</string>
    <string name="new_habit_title">Новая привычка</string>
    <string name="filter_peek_text">Фильтры и сортировка</string>
    <string name="error_name">имя уже занято</string>
    <string name="select_image_button_text">Выбрать</string>
</resources>