<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <import type="com.example.habittracker.habitClasses.HabitType"/>

        <variable
            name="viewModel"
            type="com.example.habittracker.ui.fragments.redactor.HabitRedactorViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin">


                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:text="@{viewModel.name}"
                    android:inputType="textCapSentences"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/habit_name_textView"
                    android:maxLength="30" />

                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="@dimen/small_margin"
                    android:autofillHints=""
                    android:ems="10"
                    android:text="@{viewModel.desription}"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorHint"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_textView"
                    android:maxLength="150" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="178dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="@dimen/large_margin"
                    app:layout_constraintBottom_toTopOf="@+id/textFrequency"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textType">

                    <RadioButton
                        android:id="@+id/firstRadio"
                        android:layout_width="match_parent"
                        android:checked="@{viewModel.type == HabitType.GOOD}"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:text="@string/first_option" />

                    <RadioButton
                        android:id="@+id/secondRadio"
                        android:checked="@{viewModel.type == HabitType.BAD}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:text="@string/second_option" />

                </RadioGroup>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:entries="@array/priorities"
                    app:layout_constraintStart_toEndOf="@+id/radioGroup"
                    app:layout_constraintTop_toBottomOf="@+id/textPriority" />

                <TextView
                    android:id="@+id/textPriority"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="@dimen/large_margin"
                    android:text="@string/habit_priority"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/radioGroup"
                    app:layout_constraintTop_toBottomOf="@+id/edit_description"
                    android:layout_marginStart="6dp" />

                <TextView
                    android:id="@+id/textType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_marginTop="@dimen/large_margin"
                    android:gravity="start"
                    android:text="@string/type_text"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_description"
                    android:layout_marginStart="@dimen/normal_margin" />

                <TextView
                    android:id="@+id/textFrequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:text="@string/periodicity_text"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/edit_times"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/edit_times"
                    android:layout_width="30dp"
                    android:text="@{viewModel.timesText}"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large_margin"
                    android:layout_marginLeft="@dimen/large_margin"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:autofillHints=""
                    android:ems="10"
                    android:maxLength="3"
                    android:gravity="start"
                    android:inputType="number"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/errorText"
                    app:layout_constraintStart_toEndOf="@+id/often_text1" />

                <EditText
                    android:id="@+id/edit_frequency"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.frequencyText}"
                    android:layout_marginStart="@dimen/large_margin"
                    android:layout_marginLeft="@dimen/large_margin"
                    android:autofillHints=""
                    android:ems="10"
                    android:maxLength="3"
                    android:gravity="start"
                    android:inputType="number"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/edit_times"
                    app:layout_constraintStart_toEndOf="@+id/often_text2"
                    app:layout_constraintTop_toTopOf="@+id/edit_times" />


                <TextView
                    android:id="@+id/errorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/large_margin"
                    android:text="@string/error_text"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="14sp"
                    android:visibility="@{viewModel.isNeededErrorText ? View.VISIBLE : View.INVISIBLE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.527"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/often_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_marginTop="@dimen/large_margin"
                    android:text="@string/frequency_text1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textFrequency" />

                <TextView
                    android:id="@+id/often_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large_margin"
                    android:layout_marginLeft="@dimen/large_margin"
                    android:text="@string/frequency_text2"
                    app:layout_constraintStart_toEndOf="@+id/edit_times"
                    app:layout_constraintTop_toTopOf="@+id/often_text1" />

                <TextView
                    android:id="@+id/often_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large_margin"
                    android:layout_marginLeft="@dimen/large_margin"
                    android:text="@string/frequency_text3"
                    app:layout_constraintBottom_toBottomOf="@+id/often_text2"
                    app:layout_constraintStart_toEndOf="@+id/edit_frequency" />

                <TextView
                    android:id="@+id/color_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:text="@string/habit_color"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
                    app:layout_constraintStart_toStartOf="@+id/textPriority"
                    app:layout_constraintTop_toBottomOf="@+id/spinner" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/color_pick_fab"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="@+id/color_text_view"
                    app:layout_constraintEnd_toEndOf="@+id/spinner"
                    app:layout_constraintStart_toEndOf="@+id/color_text_view"
                    app:layout_constraintTop_toTopOf="@+id/color_text_view"
                    app:srcCompat="@android:drawable/divider_horizontal_dark" />

                <TextView
                    android:id="@+id/habit_name_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:text="@string/habit_name"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="@dimen/small_margin" />

                <TextView
                    android:id="@+id/description_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_marginTop="8dp"
                    android:text="@string/habit_description"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_name"
                    android:layout_marginStart="@dimen/small_margin" />

                <ImageView
                    android:id="@+id/edit_name_text_error"
                    android:layout_width="@dimen/error_bar_size"
                    android:layout_height="@dimen/error_bar_size"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:visibility="@{viewModel.isEnteredName ?  View.INVISIBLE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="@+id/habit_name_textView"
                    app:layout_constraintStart_toEndOf="@+id/habit_name_textView"
                    app:layout_constraintTop_toTopOf="@+id/habit_name_textView"
                    app:srcCompat="@drawable/error_bar" />

                <ImageView
                    android:id="@+id/radio_group_error"
                    android:layout_width="@dimen/error_bar_size"
                    android:layout_height="@dimen/error_bar_size"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:visibility="@{viewModel.isSelectedType ? View.INVISIBLE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="@+id/textType"
                    app:layout_constraintStart_toEndOf="@+id/textType"
                    app:layout_constraintTop_toTopOf="@+id/textType"
                    app:srcCompat="@drawable/error_bar" />

                <ImageView
                    android:id="@+id/edit_frequency_error"
                    android:layout_width="@dimen/error_bar_size"
                    android:layout_height="@dimen/error_bar_size"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:visibility="@{viewModel.isEnteredFrequency ?  View.INVISIBLE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="@+id/textFrequency"
                    app:layout_constraintStart_toEndOf="@+id/textFrequency"
                    app:layout_constraintTop_toTopOf="@+id/textFrequency"
                    app:srcCompat="@drawable/error_bar"
                    android:layout_marginStart="@dimen/small_margin" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/readyFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:clickable="true"
            android:elevation="10dp"
            android:focusable="true"
            app:borderWidth="5dp"
            app:layout_constraintBottom_toTopOf="@+id/errorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_save_fab_foreground"
            tools:ignore="VectorDrawableCompat"
            tools:targetApi="lollipop" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>